--- a/add-mcp/.apollo/mcp.local.yaml
+++ b/add-mcp/.apollo/mcp.local.yaml
@@ -15,6 +15,8 @@ introspection:
     enabled: true
   execute:
     enabled: true
+  validate:
+    enabled: true
 transport:
   type: streamable_http
   port: 5000                    # MCP server port
