feat: Adding `.vscode/settings.json` and `./vscode/tasks.json` (#75)
* feat(mcp-template): add start-with-mcp template

* feat(mcp-template): add start-with-mcp template

* feat(mcp-template): add start-with-mcp apollo and vscode configurations

* WIP: add the mcp augmentation to rover-init-starters

* WIP: include mcp template to manifest

* WIP (mcp): update mcp dockerfile

* WIP (mcp): update mcp env template

* WIP (mcp): update mcp gitignore and remove unused template

* WIP (mcp): update manifest

* WIP (mcp): add example connectors and queries for 80% of known MCP use cases

* WIP (0-to-mcp): Update templates and docs to be more MCP engineer focused

* WIP (mcp): update example tools and remove platform-specific ai client references

* WIP (mcp): remove claude desktop config file

* WIP (mcp): refactor configuration files

* WIP (mcp): add latest mcp server build to dockerfile

* WIP (mcp): add latest mcp server build to dockerfile

* WIP (mcp): update endpoint for rover development

* WIP (mcp): re-include the claude-desktop-config file for quick setup

* WIP (mcp): re-name claude desktop config file

* WIP (mcp): update environment and docker template

* WIP (mcp): update claude desktop configuration file

* WIP (mcp): refine config file

* WIP (mcp): Update mcp config files

* WIP (mcp): Remove extra docs and example directory

* Renaming schema files, capitalizing getting started files, pulling in hackathon improvements (#74)

* Remove start-with-rest/supergraph.yaml (#50)

https://github.com/apollographql/rover-init-starters/pull/50

* Renaming schema file and updating READMEs and getting-started.mds (#52)

* reworking readme and getting-started + renaming schema file

* reworking readme and getting-started + renaming schema file for typescript example

* actually renaming schema file

* simplify typescript readme

* Add .env to .gitignore (#53)

* simplifying working with schema and renaming getting started

* refactoring to rename files and remove unne

--- a/add-mcp/.vscode/settings.json
+++ b/add-mcp/.vscode/settings.json
@@ -214,10 +214,19 @@
       "path": "/bin/bash",
       "args": [
         "-c",
-        "echo 'MCP Development Environment'; echo 'Available commands:'; echo '  docker build -f mcp.Dockerfile -t mcp-server .'; echo '  docker run -p 5000:5000 --env-file .env mcp-server'; echo '  npx @mcp/inspector --port 5000'; echo ''; exec bash"
+        "echo 'MCP Development Environment'; echo 'Available commands:'; echo '  docker build -f mcp.Dockerfile -t mcp-server .'; echo '  docker run -p 5050:5050 --env-file .env mcp-server'; echo '  npx @mcp/inspector --port 5050'; echo ''; exec bash"
       ]
+    },
+    "graphos": {
+      "path": "zsh",
+      "args": ["-l"],
+      "env": {
+        "APOLLO_KEY": "{{APOLLO_KEY}}",
+        "APOLLO_GRAPH_REF": "{{APOLLO_GRAPH_REF}}",
+      }
     }
   },
+  "terminal.integrated.defaultProfile.osx": "graphos",
 
   // ==========================================================================
   // TASKS AND DEBUGGING CONFIGURATION
