--- a/.github/workflows/templates-test.yml
+++ b/.github/workflows/templates-test.yml
@@ -31,3 +31,8 @@ jobs:
       run: |
         echo "Testing REST template..."
         npm run test:template start-with-rest "echo \"REST template test coming soon\""
+
+    - name: Test MCP template
+      run: |
+        echo "Testing MCP template..."
+        npm run test:template add-mcp "echo \"Testing MCP augmentation template\""
