feat(add-mcp): Add MCP Server Template and Improve Existing Templates (#77)
* feat(add-mcp): add start-with-mcp template

* feat(add-mcp): add start-with-mcp template

* feat(add-mcp): add start-with-mcp apollo and vscode configurations

* feat(add-mcp): add the mcp augmentation to rover-init-starters

* feat(add-mcp): include mcp template to manifest

* feat(add-mcp): update mcp dockerfile

* feat(add-mcp): update mcp env template

* feat(add-mcp): update mcp gitignore and remove unused template

* feat(add-mcp): update manifest

* feat(add-mcp): add example connectors and queries for 80% of known MCP use cases

* feat(add-mcp): Update templates and docs to be more MCP engineer focused

* feat(add-mcp): update example tools and remove platform-specific ai client references

* feat(add-mcp): remove claude desktop config file

* feat(add-mcp): refactor configuration files

* feat(add-mcp): add latest mcp server build to dockerfile

* feat(add-mcp): add latest mcp server build to dockerfile

* feat(add-mcp): update endpoint for rover development

* feat(add-mcp): re-include the claude-desktop-config file for quick setup

* feat(add-mcp): re-name claude desktop config file

* feat(add-mcp): update environment and docker template

* feat(add-mcp): update claude desktop configuration file

* feat(add-mcp): refine config file

* feat(add-mcp): Update mcp config files

* feat(add-mcp): Remove extra docs and example directory

* Renaming schema files, capitalizing getting started files, pulling in hackathon improvements (#74)

* Remove start-with-rest/supergraph.yaml (#50)

https://github.com/apollographql/rover-init-starters/pull/50

* Renaming schema file and updating READMEs and getting-started.mds (#52)

* reworking readme and getting-started + renaming schema file

* reworking readme and getting-started + renaming schema file for typescript example

* actually renaming schema file

* simplify typescript readme

* Add .env to .gitignore (#53)

* simplifying working with

--- a/.github/workflows/templates-test.yml
+++ b/.github/workflows/templates-test.yml
@@ -20,14 +20,19 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: npm i
 
     - name: Test TypeScript template
       run: |
         echo "Testing TypeScript template..."
-        npm run test:template start-with-typescript "npm ci" "npm test"
+        npm run test:template start-with-typescript "npm i" "npm test"
 
     - name: Test REST template
       run: |
         echo "Testing REST template..."
         npm run test:template start-with-rest "echo \"REST template test coming soon\""
+
+    - name: Test MCP template
+      run: |
+        echo "Testing MCP template..."
+        npm run test:template add-mcp "echo \"Testing MCP augmentation template\""
