--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,20 @@
       "language": "Typescript",
       "federation_version": "=2.10.0",
       "max_schema_depth": 5,
-      "test_commands": ["npm ci","npm test"],
-      "commands": ["npm ci", "npm run dev"],
+      "test_commands": ["npm i","npm test"],
+      "commands": ["npm i", "npm run dev"],
       "routing_url": "http://localhost:4001",
+      "print_depth": 2
+    },
+    {
+      "id": "add-mcp",
+      "display_name": "Add MCP Server to Existing Project",
+      "path": "add-mcp",
+      "language": "any",
+      "federation_version": "=2.11.0",
+      "max_schema_depth": 0,
+      "routing_url": "",
+      "test_commands": ["echo \"Testing MCP augmentation template\""],
       "print_depth": 2
     }
   ]
