--- a/add-mcp/.apollo/mcp.staging.yaml
+++ b/add-mcp/.apollo/mcp.staging.yaml
@@ -53,10 +53,10 @@ description: "Staging environment for ${PROJECT_NAME} GraphQL API"
 # 2. Set STAGING_GRAPHQL_ENDPOINT to your staging GraphQL URL
 # 3. Set APOLLO_KEY for authentication
 # 4. Run: docker build -f mcp.Dockerfile -t my-mcp-staging .
-# 5. Run: docker run -p 5050:5050 --env-file .env.staging my-mcp-staging
+# 5. Run: docker run -p 5050:5000 --env-file .env.staging my-mcp-staging
 
 # Environment variables for staging:
 # STAGING_GRAPHQL_ENDPOINT - staging GraphQL endpoint
 # APOLLO_KEY - API key for staging authentication
 # PROJECT_NAME - project identifier
-# MCP_PORT - MCP server port (default: 5050)
+# MCP_PORT - MCP server port
