Update the mcp container port to 5000 (#82)
* updating mcp container port;

* putting it back to 5050

--- a/add-mcp/.apollo/mcp.local.yaml
+++ b/add-mcp/.apollo/mcp.local.yaml
@@ -43,5 +43,5 @@ description: "GraphQL API for ${PROJECT_NAME}"
 
 # Environment variables (optional):
 # GRAPHQL_ENDPOINT - override endpoint URL
-# MCP_PORT - override MCP server port (default: 5050)
+# MCP_PORT - override MCP server port
 # PROJECT_NAME - project identifier for AI assistant
