Add in a router configuration
We should put new use cases on the latest connectors to get feedback

--- a/start-with-rest/.vscode/tasks.json
+++ b/start-with-rest/.vscode/tasks.json
@@ -10,6 +10,8 @@
         "dev",
         "--supergraph-config",
         "supergraph.yaml",
+        "--router-config",
+        "router.yaml",
       ],
       "type": "shell",
       "dependsOrder": "sequence",
