--- a/add-mcp/.vscode/tasks.json
+++ b/add-mcp/.vscode/tasks.json
@@ -10,6 +10,8 @@
         "dev",
         "--supergraph-config",
         "supergraph.yaml",
+        "--router-config",
+        "router.yaml",
         "--mcp",
         ".apollo/mcp.local.yaml"
       ],
