Simplify MCP template (#84)
* Use correct Inspector task info

* Add in a router configuration

We should put new use cases on the latest connectors to get feedback

* Standardize on port 5000

* All mutations should require confirmation

* Simplify settings for VS Code

* remove claude desktop config

* Use port 5000

* Remove duplicative README

* feat(add-mcp): Revert MCP server port from 5000 to 5050

* feat(add-mcp): Update MCP README to reflect removal of Claude Desktop configuration

* feat(add-mcp): Update port to 5050

* feat(add-mcp): Replace mcp-claude shortlink

---------

Co-authored-by: Camille Lawrence <camille.lawrence@apollographql.com>

--- a/add-mcp/.vscode/tasks.json
+++ b/add-mcp/.vscode/tasks.json
@@ -10,6 +10,8 @@
         "dev",
         "--supergraph-config",
         "supergraph.yaml",
+        "--router-config",
+        "router.yaml",
         "--mcp",
         ".apollo/mcp.local.yaml"
       ],
@@ -28,7 +30,7 @@
       // Opens MCP inspector UI in browser to test your AI tools
       "label": "Test MCP Tools",
       "command": "npx",
-      "args": ["@mcp/inspector", "--port", "5050"],
+      "args": ["@modelcontextprotocol/inspector", "--transport", "http", "--server-url", "http://localhost:5050/mcp"],
       "type": "shell"
     }
   ]
