--- a/.github/workflows/sync-mcp-schema.yml
+++ b/.github/workflows/sync-mcp-schema.yml
@@ -8,10 +8,6 @@ on:
   # Allow manual trigger
   workflow_dispatch:
 
-  # Also trigger on repository_dispatch from Apollo (if they set this up)
-  repository_dispatch:
-    types: [apollo-mcp-server-release]
-
 jobs:
   sync-schema:
     runs-on: ubuntu-latest
@@ -62,7 +58,7 @@ jobs:
 
       - name: Create Pull Request
         if: steps.check-update.outputs.needs_update == 'true'
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725  # v8.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "chore: update MCP server schema to ${{ steps.get-release.outputs.version }}"
