chore: update CODEOWNERS to new team assignment
Signed-off-by: camillelawrence <gocamille@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-* @apollographql/team-growth
-add-mcp/.vscode/schemas/* @gocamille @apollographql/team-growth
+* @apollographql/ai-apps
+docs @apollographql/docs @apollographql/ai-apps
